[project]
name = "esnerf"
description = "Template repository for creating and registering new methods in nerfstudio."
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.3"] 

[tool.setuptools.packages.find]
include = ["esnerf*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
esnerf = 'esnerf.esnerf_config:ESNerf'
